// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button - danger state visual snapshot 1`] = `
<button
  class="btn btn-danger btn-medium "
>
  Danger Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button - disabled state visual snapshot 1`] = `
<button
  class="btn btn-primary btn-medium btn-disabled"
  disabled=""
>
  Disabled Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button - large state visual snapshot 1`] = `
<button
  class="btn btn-primary btn-large "
>
  Large Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button - primary state visual snapshot 1`] = `
<button
  class="btn btn-primary btn-medium "
>
  Primary Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button - secondary state visual snapshot 1`] = `
<button
  class="btn btn-secondary btn-medium "
>
  Secondary Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button - small state visual snapshot 1`] = `
<button
  class="btn btn-primary btn-small "
>
  Small Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button - success state visual snapshot 1`] = `
<button
  class="btn btn-success btn-medium "
>
  Success Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button Responsive - desktop (1024px) visual snapshot 1`] = `
<button
  class="btn btn-primary btn-medium "
>
  Responsive Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button Responsive - large-desktop (1440px) visual snapshot 1`] = `
<button
  class="btn btn-primary btn-medium "
>
  Responsive Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button Responsive - mobile (375px) visual snapshot 1`] = `
<button
  class="btn btn-primary btn-medium "
>
  Responsive Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Button Component > Button Responsive - tablet (768px) visual snapshot 1`] = `
<button
  class="btn btn-primary btn-medium "
>
  Responsive Button
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > Data Display Components > Player profile card - visual snapshot 1`] = `
<div
  class="player-card"
>
  <div
    class="player-card-header"
  >
    <div
      class="player-name"
    >
      <span
        class="player-title"
      >
        WFM
      </span>
      Alice Johnson
    </div>
    <div
      class="player-country"
    >
      US
    </div>
  </div>
  <div
    class="player-rating"
  >
    1650
  </div>
  <div
    class="player-details"
  >
    <span>
      Email: 
      test@example.com
    </span>
    <span>
      Phone: 
      +1234567890
    </span>
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > Data Display Components > Tournament card - visual snapshot 1`] = `
<div
  class="tournament-card"
>
  <div
    class="tournament-card-header"
  >
    <h3
      class="tournament-name"
    >
      Spring Championship 2024
    </h3>
    <span
      class="tournament-status status-active"
    >
      active
    </span>
  </div>
  <div
    class="tournament-stats"
  >
    <div
      class="stat"
    >
      <span
        class="stat-label"
      >
        Players
      </span>
      <span
        class="stat-value"
      >
        32
      </span>
    </div>
    <div
      class="stat"
    >
      <span
        class="stat-label"
      >
        Rounds
      </span>
      <span
        class="stat-value"
      >
        0
        /
        7
      </span>
    </div>
  </div>
  <div
    class="tournament-actions"
  >
    <button
      class="btn btn-primary btn-small "
    >
      View Details
    </button>
    <button
      class="btn btn-secondary btn-small "
    >
      Export
    </button>
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > EmptyState Component > EmptyState - basic state visual snapshot 1`] = `
<div
  class="empty-state"
>
  <h3
    class="empty-state-title"
  >
    No tournaments yet
  </h3>
  <p
    class="empty-state-description"
  >
    Create your first tournament to get started.
  </p>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > EmptyState Component > EmptyState - with-action state visual snapshot 1`] = `
<div
  class="empty-state"
>
  <h3
    class="empty-state-title"
  >
    No players found
  </h3>
  <p
    class="empty-state-description"
  >
    Add players to this tournament to begin pairing rounds.
  </p>
  <div
    class="empty-state-action"
  >
    <button
      class="btn btn-primary btn-medium "
    >
      Add Players
    </button>
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > EmptyState Component > EmptyState - with-icon state visual snapshot 1`] = `
<div
  class="empty-state"
>
  <div
    class="empty-state-icon"
  >
    🏆
  </div>
  <h3
    class="empty-state-title"
  >
    No results available
  </h3>
  <p
    class="empty-state-description"
  >
    Complete some games to see tournament standings.
  </p>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > Error States > Error message components - visual snapshot 1`] = `
<div
  class="error-states"
>
  <div
    class="error-banner error-banner-danger"
  >
    <strong>
      Error:
    </strong>
     Failed to save tournament data.
  </div>
  <div
    class="error-banner error-banner-warning"
  >
    <strong>
      Warning:
    </strong>
     Some player ratings are missing.
  </div>
  <div
    class="error-banner error-banner-info"
  >
    <strong>
      Info:
    </strong>
     Tournament will start in 30 minutes.
  </div>
  <div
    class="error-inline"
  >
    <span
      class="error-text"
    >
      Invalid email format
    </span>
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > Form Components > Player form - visual snapshot 1`] = `
<form
  class="player-form"
>
  <div
    class="form-section"
  >
    <h3>
      Personal Information
    </h3>
    <div
      class="form-row"
    >
      <div
        class="form-field"
      >
        <label>
          Full Name
        </label>
        <input
          class="form-input"
          type="text"
          value="Alice Johnson"
        />
      </div>
      <div
        class="form-field"
      >
        <label>
          Title
        </label>
        <select
          class="form-select"
        >
          <option
            value=""
          >
            No Title
          </option>
          <option
            value="CM"
          >
            CM
          </option>
          <option
            value="FM"
          >
            FM
          </option>
          <option
            selected=""
            value="WFM"
          >
            WFM
          </option>
          <option
            value="IM"
          >
            IM
          </option>
          <option
            value="GM"
          >
            GM
          </option>
        </select>
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-field"
      >
        <label>
          Rating
        </label>
        <input
          class="form-input"
          type="number"
          value="1650"
        />
      </div>
      <div
        class="form-field"
      >
        <label>
          Country
        </label>
        <select
          class="form-select"
        >
          <option
            selected=""
            value="US"
          >
            United States
          </option>
          <option
            value="CA"
          >
            Canada
          </option>
          <option
            value="UK"
          >
            United Kingdom
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="form-section"
  >
    <h3>
      Contact Information
    </h3>
    <div
      class="form-field"
    >
      <label>
        Email
      </label>
      <input
        class="form-input"
        type="email"
        value="alice@example.com"
      />
    </div>
    <div
      class="form-field"
    >
      <label>
        Phone
      </label>
      <input
        class="form-input"
        type="tel"
        value="+1 (555) 123-4567"
      />
    </div>
  </div>
  <div
    class="form-actions"
  >
    <button
      class="btn btn-secondary btn-medium "
    >
      Cancel
    </button>
    <button
      class="btn btn-primary btn-medium "
    >
      Save Player
    </button>
  </div>
</form>
`;

exports[`Visual Regression Tests - Component Snapshots > Form Components > Tournament form - visual snapshot 1`] = `
<form
  class="tournament-form"
>
  <div
    class="form-section"
  >
    <h3>
      Basic Information
    </h3>
    <div
      class="form-field"
    >
      <label>
        Tournament Name
      </label>
      <input
        class="form-input"
        type="text"
        value="Spring Championship 2024"
      />
    </div>
    <div
      class="form-field"
    >
      <label>
        Description
      </label>
      <textarea
        class="form-textarea"
        rows="3"
      >
        Annual spring tournament
      </textarea>
    </div>
  </div>
  <div
    class="form-section"
  >
    <h3>
      Tournament Settings
    </h3>
    <div
      class="form-row"
    >
      <div
        class="form-field"
      >
        <label>
          Max Players
        </label>
        <input
          class="form-input"
          type="number"
          value="16"
        />
      </div>
      <div
        class="form-field"
      >
        <label>
          Max Rounds
        </label>
        <input
          class="form-input"
          type="number"
          value="5"
        />
      </div>
    </div>
    <div
      class="form-field"
    >
      <label>
        Pairing Method
      </label>
      <select
        class="form-select"
      >
        <option
          selected=""
          value="swiss"
        >
          Swiss System
        </option>
        <option
          value="round_robin"
        >
          Round Robin
        </option>
        <option
          value="knockout"
        >
          Knockout
        </option>
      </select>
    </div>
  </div>
  <div
    class="form-actions"
  >
    <button
      class="btn btn-secondary btn-medium "
    >
      Cancel
    </button>
    <button
      class="btn btn-primary btn-medium "
    >
      Create Tournament
    </button>
  </div>
</form>
`;

exports[`Visual Regression Tests - Component Snapshots > Layout Components > Navigation Responsive - desktop (1024px) visual snapshot 1`] = `
<header
  class="app-header"
>
  <div
    class="nav-brand"
  >
    <h1>
      ♜ Pawn
    </h1>
  </div>
  <nav
    class="nav-menu"
  >
    <a
      class="nav-link active"
      href="/tournaments"
    >
      Tournaments
    </a>
    <a
      class="nav-link"
      href="/players"
    >
      Players
    </a>
    <a
      class="nav-link"
      href="/settings"
    >
      Settings
    </a>
  </nav>
</header>
`;

exports[`Visual Regression Tests - Component Snapshots > Layout Components > Navigation Responsive - large-desktop (1440px) visual snapshot 1`] = `
<header
  class="app-header"
>
  <div
    class="nav-brand"
  >
    <h1>
      ♜ Pawn
    </h1>
  </div>
  <nav
    class="nav-menu"
  >
    <a
      class="nav-link active"
      href="/tournaments"
    >
      Tournaments
    </a>
    <a
      class="nav-link"
      href="/players"
    >
      Players
    </a>
    <a
      class="nav-link"
      href="/settings"
    >
      Settings
    </a>
  </nav>
</header>
`;

exports[`Visual Regression Tests - Component Snapshots > Layout Components > Navigation Responsive - mobile (375px) visual snapshot 1`] = `
<header
  class="app-header"
>
  <div
    class="nav-brand"
  >
    <h1>
      ♜ Pawn
    </h1>
  </div>
  <nav
    class="nav-menu"
  >
    <a
      class="nav-link active"
      href="/tournaments"
    >
      Tournaments
    </a>
    <a
      class="nav-link"
      href="/players"
    >
      Players
    </a>
    <a
      class="nav-link"
      href="/settings"
    >
      Settings
    </a>
  </nav>
</header>
`;

exports[`Visual Regression Tests - Component Snapshots > Layout Components > Navigation Responsive - tablet (768px) visual snapshot 1`] = `
<header
  class="app-header"
>
  <div
    class="nav-brand"
  >
    <h1>
      ♜ Pawn
    </h1>
  </div>
  <nav
    class="nav-menu"
  >
    <a
      class="nav-link active"
      href="/tournaments"
    >
      Tournaments
    </a>
    <a
      class="nav-link"
      href="/players"
    >
      Players
    </a>
    <a
      class="nav-link"
      href="/settings"
    >
      Settings
    </a>
  </nav>
</header>
`;

exports[`Visual Regression Tests - Component Snapshots > Layout Components > Navigation header - visual snapshot 1`] = `
<header
  class="app-header"
>
  <div
    class="nav-brand"
  >
    <h1>
      ♜ Pawn
    </h1>
  </div>
  <nav
    class="nav-menu"
  >
    <a
      class="nav-link active"
      href="/tournaments"
    >
      Tournaments
    </a>
    <a
      class="nav-link"
      href="/players"
    >
      Players
    </a>
    <a
      class="nav-link"
      href="/settings"
    >
      Settings
    </a>
  </nav>
  <div
    class="nav-actions"
  >
    <button
      class="btn btn-primary btn-small "
    >
      New Tournament
    </button>
  </div>
</header>
`;

exports[`Visual Regression Tests - Component Snapshots > Layout Components > Sidebar layout - visual snapshot 1`] = `
<div
  class="app-layout"
>
  <aside
    class="sidebar"
  >
    <div
      class="sidebar-header"
    >
      <h2>
        Tournament Menu
      </h2>
    </div>
    <nav
      class="sidebar-nav"
    >
      <a
        class="sidebar-link active"
        href="#overview"
      >
        Overview
      </a>
      <a
        class="sidebar-link"
        href="#players"
      >
        Players
      </a>
      <a
        class="sidebar-link"
        href="#pairings"
      >
        Pairings
      </a>
      <a
        class="sidebar-link"
        href="#results"
      >
        Results
      </a>
      <a
        class="sidebar-link"
        href="#standings"
      >
        Standings
      </a>
    </nav>
  </aside>
  <main
    class="main-content"
  >
    <div
      class="content-header"
    >
      <h1>
        Tournament Overview
      </h1>
      <button
        class="btn btn-primary btn-medium "
      >
        Edit Tournament
      </button>
    </div>
    <div
      class="content-body"
    >
      <p>
        Main content area
      </p>
    </div>
  </main>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > LoadingButton Component > LoadingButton - idle state visual snapshot 1`] = `
<button
  class="loading-btn "
>
  <span>
    Save Tournament
  </span>
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > LoadingButton Component > LoadingButton - loading state visual snapshot 1`] = `
<button
  class="loading-btn loading"
  disabled=""
>
  <span
    class="spinner"
  />
  <span>
    Saving...
  </span>
</button>
`;

exports[`Visual Regression Tests - Component Snapshots > StatCard Component > StatCard - basic state visual snapshot 1`] = `
<div
  class="stat-card stat-card-primary"
>
  <div
    class="stat-card-header"
  >
    <h3
      class="stat-card-title"
    >
      Total Players
    </h3>
  </div>
  <div
    class="stat-card-value"
  >
    156
  </div>
  <div
    class="stat-card-subtitle"
  >
    Registered this month
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > StatCard Component > StatCard - large-numbers state visual snapshot 1`] = `
<div
  class="stat-card stat-card-primary"
>
  <div
    class="stat-card-header"
  >
    <h3
      class="stat-card-title"
    >
      Total Games Played
    </h3>
  </div>
  <div
    class="stat-card-value"
  >
    23,456
  </div>
  <div
    class="stat-card-subtitle"
  >
    Since launch
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > StatCard Component > StatCard - with-trend-negative state visual snapshot 1`] = `
<div
  class="stat-card stat-card-warning"
>
  <div
    class="stat-card-header"
  >
    <h3
      class="stat-card-title"
    >
      Completion Rate
    </h3>
    <span
      class="stat-card-trend negative"
    >
      -3
      %
    </span>
  </div>
  <div
    class="stat-card-value"
  >
    87%
  </div>
  <div
    class="stat-card-subtitle"
  >
    This week
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > StatCard Component > StatCard - with-trend-positive state visual snapshot 1`] = `
<div
  class="stat-card stat-card-success"
>
  <div
    class="stat-card-header"
  >
    <h3
      class="stat-card-title"
    >
      Active Tournaments
    </h3>
    <span
      class="stat-card-trend positive"
    >
      15
      %
    </span>
  </div>
  <div
    class="stat-card-value"
  >
    12
  </div>
  <div
    class="stat-card-subtitle"
  >
    Currently running
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > Theme Variations > Dark theme components - visual snapshot 1`] = `
<div
  class="theme-dark"
>
  <div
    class="card"
  >
    <h3>
      Dark Theme Card
    </h3>
    <p>
      This demonstrates dark theme styling
    </p>
    <div
      class="button-group"
    >
      <button
        class="btn btn-primary btn-medium "
      >
        Primary
      </button>
      <button
        class="btn btn-secondary btn-medium "
      >
        Secondary
      </button>
    </div>
  </div>
  <div
    class="stat-card stat-card-primary"
  >
    <div
      class="stat-card-header"
    >
      <h3
        class="stat-card-title"
      >
        Dark Theme Stats
      </h3>
    </div>
    <div
      class="stat-card-value"
    >
      42
    </div>
    <div
      class="stat-card-subtitle"
    >
      Looking good in dark mode
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Component Snapshots > Theme Variations > High contrast theme - visual snapshot 1`] = `
<div
  class="theme-high-contrast"
>
  <div
    class="card"
  >
    <h3>
      High Contrast Theme
    </h3>
    <p>
      Accessibility-focused high contrast theme
    </p>
    <div
      class="button-group"
    >
      <button
        class="btn btn-primary btn-medium "
      >
        Primary Action
      </button>
      <button
        class="btn btn-secondary btn-medium "
      >
        Secondary Action
      </button>
    </div>
  </div>
  <div
    class="empty-state"
  >
    <h3
      class="empty-state-title"
    >
      High Contrast Empty State
    </h3>
    <p
      class="empty-state-description"
    >
      Clear visibility for all users
    </p>
    <div
      class="empty-state-action"
    >
      <button
        class="btn btn-primary btn-medium "
      >
        Take Action
      </button>
    </div>
  </div>
</div>
`;
